--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
       <div id="placar">
         <div id="jogador">
-          <h2 id="jogador-nome">Jeison</h2>
+          <h2 id="jogador-nome">&nbsp;</h2>
           <span id="jogador-pontos">0</span>
           <ul id="jogador-escolha">
-            <li><a id="jogador-escolha-1"><img src="/assets/pedra.png" alt=""></a> </li>
-            <li><a id="jogador-escolha-2"><img src="/assets/papel.png" alt=""></a> </li>
-            <li><a id="jogador-escolha-3"><img src="/assets/tesoura.png" alt=""></a> </li>
+            <li><a id="jogador-escolha-1"><img src="/assets/pedra.png"></a> </li>
+            <li><a id="jogador-escolha-2"><img src="/assets/papel.png"></a> </li>
+            <li><a id="jogador-escolha-3"><img src="/assets/tesoura.png"></a> </li>
           </ul>  
         </div>
 
@@ -29,13 +29,13 @@
           <h2 id="computador-nome">Computador</h2>
           <span id="computador-pontos">0</span>
           <ul id="computador-escolha">
-            <li><a id="computador-escolha1"><img src="/assets/pedra.png" alt=""></a></li>
-            <li><a id="computador-escolha2"><img src="/assets/papel.png" alt=""></a></li>
-            <li><a id="computador-escolha3"><img src="/assets/tesoura.png" alt=""></a></li>
+            <li><a id="computador-escolha-1"><img src="/assets/pedra.png"></a></li>
+            <li><a id="computador-escolha-2"><img src="/assets/papel.png"></a></li>
+            <li><a id="computador-escolha-3"><img src="/assets/tesoura.png"></a></li>
           </ul>
         </div>
     </div>
-    <div id="mensagem">Mensagem</div>
+    <div id="mensagem">Bora Jogar?</div>
     </div>
     <script src="/script.js"></script>
   </body>
